# dhan-trading-app

./: .env  .gitignore  .pre-commit-config.yaml  =0.3.0  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MARKET_DEPTH_20_LEVEL.md  OPENING_RANGE_OI_STRATEGY.md  README.md  SETUP_GUIDE.md  STARTUP_SCRIPTS_README.md  api_usage_examples.py  demo_opening_range_calculation.py  demo_working_range_oi.py  prompt.md  pyproject.toml  requirements.txt  setup.py  start.txt  start_app.bat  start_app.py  start_app.sh  test_custom_range_oi.py  test_enhanced_chat.py  test_market_depth.py  test_oi_calculation.py  test_oi_strategy.py  test_opening_range_oi.py  test_range_oi_strategy.py
config/: config.yaml
scripts/: start_backend.py
src/dhan_trader/: __init__.py  cli.py  config.py  exceptions.py  main.py
src/dhan_trader/ai/: __init__.py  chat_service.py  dynamic_oi_analyzer.py  enhanced_chat_service.py  gemini_client.py  oi_recommendation_service.py  trading_advisor.py
src/dhan_trader/analysis/: depth_analyzer.py  range_oi_analyzer.py
src/dhan_trader/api/: __init__.py  chat_models.py  client.py  models.py  server.py  websocket.py  websocket_depth.py
src/dhan_trader/market_data/: __init__.py  depth_manager.py  manager.py  oi_tracker.py
src/dhan_trader/strategies/: __init__.py  oi_strategy.py  range_oi_strategy.py
tests/: test_basic.py
